--- a/servicios.html
+++ b/servicios.html
@@ -72,7 +72,7 @@
  
       <div class="col-12 col-md-4 mb-5">
           <div class=" card border-light shadow-lg rounded" style="width: 15rem;">
-         <img src="png/png39.png" class="card-img-top mb-3 mt-3" alt="...">
+         <img src="png/Pagina web-39.png" class="card-img-top mb-3 mt-3" alt="...">
          <div class="card-body">
          <h5 class="card-title">Diseño Grafico</h5>
          <p class="card-text">Diseñamos un logotipo creativo y funcional para tu empresa, creando personalidad y presencia</p>
@@ -82,7 +82,7 @@
         </div>
             <div class="col-12 col-md-4 mb-5">
           <div class="card border-light shadow-lg rounded" style="width: 15rem;">
-          <img src="png/png40.png" class="card-img-top" alt="...">
+          <img src="png/Pagina web-40.png" class="card-img-top" alt="...">
           <div class="card-body">
           <h5 class="card-title">Diseño Web</h5>
           <p class="card-text">Diseño funcional y atractivo para lograr una llegada optima desde el primer momento
@@ -94,7 +94,7 @@
         </div>
             <div class="col-12 col-md-4 mb-5">
           <div class=" card border-light shadow-lg rounded" style="width: 15rem;">
-            <img src="png/png41.png" class="card-img-top" alt="...">
+            <img src="png/Pagina web-41.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -124,7 +124,7 @@
  
              <div class="col-12 col-md-4  mb-5">
           <div class=" card border-light shadow-lg rounded" style="width: 15rem;">
-         <img src="png/png39.png" class="card-img-top mb-3 mt-3" alt="...">
+         <img src="png/Pagina web-39.png" class="card-img-top mb-3 mt-3" alt="...">
          <div class="card-body">
            <h5 class="card-title">Basic </h5>
            <p class="card-text">Diseño de Logo primario, diseño de identidad web, landing page plantilla acorde a identidad.</p>
@@ -134,7 +134,7 @@
         </div>
             <div class="col-12 col-md-4  mb-5">
           <div class="card border-light shadow-lg rounded" style="width: 15rem;">
-     <img src="png/png40.png" class="card-img-top" alt="...">
+     <img src="png/Pagina web-40.png" class="card-img-top" alt="...">
      <div class="card-body">
        <h5 class="card-title">Servico Pymes</h5>
        <p class="card-text">Diseño de Logo primario, diseño de identidad web, landing page plantilla acorde a identidad, seguimiemto de cuentas y posteos personalizados</p>
@@ -144,7 +144,7 @@
         </div>
             <div class="col-12 col-md-4 mb-5">
           <div class=" card border-light shadow-lg rounded" style="width: 15rem;">
-     <img src="png/png41.png" class="card-img-top" alt="...">
+     <img src="png/Pagina web-41.png" class="card-img-top" alt="...">
      <div class="card-body">
        <h5 class="card-title">Servicio empresas</h5>
        <p class="card-text">Research de la identidad.Diseño de Logo primario, diseño de identidad web, landing    page plantilla acorde a identidad,posicionamiento SEO seguimiemto de cuentas y posteos personalizados,</p>
