--- a/nosotros.html
+++ b/nosotros.html
@@ -32,6 +32,78 @@
     <title>masdiseño/nosotros</title>
   </head>
   <body>
+    <div class="container-fluid navgris">
+      <nav id="menu" class="navbar navbar-expand-md navbar-light navgris">
+        <div class="container">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand mx-auto hvr-pulse-grow" href="index.html">
+            <img src="assets/Pagina web-03.png" alt="logo" class="logo" />
+          </a>
+
+          <div
+            class="collapse navbar-collapse justify-content-md-end"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link h6 text-white hvr-pulse-grow"
+                  aria-current="index.html"
+                  href="#"
+                  >Inicio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link h6 text-white hvr-pulse-grow"
+                  aria-current="nosotros.html"
+                  href="nosotros.html"
+                  >Nosotros</a
+                >
+              </li>
+
+              <li class="nav-item">
+                <a
+                  class="nav-link h6 text-white hvr-pulse-grow"
+                  href="servicios.html"
+                  >Servicios</a
+                >
+              </li>
+
+              <li class="nav-item">
+                <a
+                  href="https://www.facebook.com/M%C3%A1s-Dise%C3%B1o-105418711785344"
+                  class="mx-2 my-auto text-white hvr-pulse-grow"
+                  target="_blank"
+                  ><i class="fab fa-facebook-square fa-2x"></i
+                ></a>
+              </li>
+              <li class="nav-item">
+                <a
+                  href="https://www.instagram.com/masdisseno/"
+                  class="mx-2 my-auto text-white hvr-pulse-grow"
+                  target="_blank"
+                  ><i class="fab fa-instagram fa-2x"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <div class="container-fluid cajamarilla">
+      <h5 class="cursiva mb-3 mt-5" id="">diseño</h5>
+    </div>
     <footer>
       <div class="container mt-5">
         <div class="row justify-content-around">
