--- a/servicios.html
+++ b/servicios.html
@@ -73,23 +73,22 @@
               <div class="row justify-content-around">
  
       <div class="col-12 col-md-4 mb-5">
-          <div class=" card border-light shadow-lg rounded" style="width: 15rem;">
+          <div class=" card border-light shadow-lg rounded" style="width: 15.5rem;">
          <img src="png/Pagina web-39.png" class="card-img-top mb-3 " alt="...">
          <div class="card-body">
          <h5 class="card-title">Diseño Web</h5>
          <p class="card-text">Llevamos a cabo proyectos webs que funcionan gracias a un gran diseño, una programación perfecta y una comunicación potente.</p>
-         <a href="#" class="btn btn-primary">Ver mas</a>
+         <a href="mailto:holamasdiseno@gmail.com" class="btn btn-primary">Ver mas</a>
       </div>
       </div>
         </div>
             <div class="col-12 col-md-4 mb-5">
-          <div class="card border-light shadow-lg rounded" style="width: 15rem;">
+          <div class="card border-light shadow-lg rounded" style="width: 15.5rem;">
           <img src="png/Pagina web-40.png" class="card-img-top" alt="...">
           <div class="card-body">
           <h5 class="card-title">Diseño Gráfico </h5>
-          <p class="card-text fs-6 text badge  text-wrap">Diseño de identidad corporativa, merchandising,editorial,brochure, presentaciones,logotipos, folletos,placas redes y más. 
-          </p>
-           <a href="#" class="btn btn-primary">Ver mas</a>
+          <p class="card-text text-justify ">Diseño de identidad corporativa, merchandising,editorial,brochure, presentaciones,logotipos, folletos,placas redes y más. </p>
+           <a href="mailto:holamasdiseno@gmail.com" class="btn btn-primary">Ver mas</a>
            </div>
         </div>
         </div>
@@ -97,10 +96,9 @@
           <div class=" card border-light shadow-lg rounded" style="width: 15rem;">
             <img src="png/Pagina web-41.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Diseño Logo</h5>
-              <p class="card-text">Diseñamos un logotipo creativo y funcional para tu empresa, para que proyectes una imagen espectacular.
-</p>
-                <a href="#" class="btn btn-primary">Ver mas</a>
+                <h5 class="card-title">DISEÑO LOGOTIPOS</h5>
+              <p class="card-text">Las redes sociales son un canal de venta y un lugar donde transmitir tus valores como empresa. Tenés que ir hacia donde está tu audiencia.</p>
+                <a href="mailto:holamasdiseno@gmail.com" class="btn btn-primary">Ver mas</a>
        </div>
       </div>
         </div>
@@ -128,9 +126,11 @@
           <div class=" card border-light shadow-lg rounded" style="width: 15rem;">
          <img src="png/Pagina web-42.png" class="card-img-top mb-3" alt="...">
          <div class="card-body">
-           <h5 class="card-title">Basic </h5>
-           <p class="card-text">Diseño de Logo primario, diseño de identidad web, landing page plantilla acorde a identidad.</p>
-           <a href="#" class="btn btn-primary">Consulta</a>
+           <h5 class="card-title">IDENTIDAD VISUAL</h5>
+           <p class="card-text">Construcción de varios elementos gráficos y visuales para comunicar el concepto de una marca, sus valores y el posicionamiento en el mercado hacia su 
+público.
+</p>
+           <a href="mailto:holamasdiseno@gmail.com" class="btn btn-primary">Consulta</a>
          </div>
       </div>
         </div>
@@ -138,9 +138,10 @@
           <div class="card border-light shadow-lg rounded" style="width: 15rem;">
      <img src="png/Pagina web-43.png" class="card-img-top" alt="...">
      <div class="card-body">
-       <h5 class="card-title">Servico Pymes</h5>
-       <p class="card-text">Diseño de Logo primario, diseño de identidad web, landing page plantilla acorde a identidad, seguimiemto de cuentas y posteos personalizados</p>
-       <a href="#" class="btn btn-primary">Consulta</a>
+       <h5 class="card-title">MANEJO REDES</h5>
+       <p class="card-text">Las redes sociales son un canal de venta y un lugar donde transmitir tus valores como empresa. Tenés que ir hacia donde está tu audiencia.
+</p>
+       <a href="mailto:holamasdiseno@gmail.com" class="btn btn-primary">Consulta</a>
      </div>
     </div>
         </div>
@@ -148,9 +149,9 @@
           <div class=" card border-light shadow-lg rounded" style="width: 15rem;">
      <img src="png/Pagina web-44.png" class="card-img-top" alt="...">
      <div class="card-body">
-       <h5 class="card-title">Servicio empresas</h5>
-       <p class="card-text">Research de la identidad.Diseño de Logo primario, diseño de identidad web, landing    page plantilla acorde a identidad,posicionamiento SEO seguimiemto de cuentas y posteos personalizados,</p>
-       <a href="#" class="btn btn-primary">Consulta </a>
+       <h5 class="card-title">SEO</h5>
+       <p class="card-text">Posicionanmiento organico, contextual de tu pagina optimizado para los motores de busqueda</p>
+       <a href="mailto:holamasdiseno@gmail.com" class="btn btn-primary">Consulta </a>
      </div>
     </div>
         </div>
