--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <a class="nav-link  h6 text-white hvr-pulse-grow" aria-current="index.html" href="#">Inicio</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link  h6 text-white hvr-pulse-grow" aria-current="nosotros.html" href="#">Nosotros</a>
+          <a class="nav-link  h6 text-white hvr-pulse-grow" aria-current="nosotros.html" href="nosotros.html">Nosotros</a>
         </li>
         
         <li class="nav-item ">
@@ -106,26 +106,42 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="assets/design-1_Mesa de trabajo 1-07.png" class="d-block w-100" alt="...">
+      <img src="carrousel/carrousel1.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>First slide label</h5>
         <p>Some representative placeholder content for the first slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="assets/notebook-1_Mesa de trabajo 1-01.png" class="d-block w-100" alt="...">
+      <img src="carrousel/carrousel2.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Second slide label</h5>
         <p>Some representative placeholder content for the second slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="assets/notebook-1_Mesa de trabajo 1-02.png " class="d-block w-100" alt="...">
+      <img src="carrousel/carrousel3.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
       </div>
     </div>
+  </div>
+   <div class="carousel-item">
+      <img src="carrousel/carrousel4.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>Some representative placeholder content for the third slide.</p>
+      </div>
+    </div>
+     <div class="carousel-item">
+      <img src="carrousel/carrousel5.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>Some representative placeholder content for the third slide.</p>
+      </div>
+    </div>
+  </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -202,7 +218,7 @@
         </li>
         <div class="vertical mx-2 mt-2"></div>
         <li class="nav-item ">
-          <a class="nav-link  h6 text-dark hvr-pulse-grow mx-2" aria-current="page" href="#">Nosotros</a>
+          <a class="nav-link  h6 text-dark hvr-pulse-grow mx-2" aria-current="page" href="nosotros.html">Nosotros</a>
         </li>
         <div class="vertical mx-2 mt-2"></div>
         <li class="nav-item ">
