--- a/nosotros.html
+++ b/nosotros.html
@@ -29,6 +29,7 @@
       integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
       crossorigin="anonymous"
     />
+    <script async src="effect.js"></script>
     <title>masdiseño/nosotros</title>
   </head>
   <body>
@@ -102,14 +103,15 @@
       </nav>
     </div>
     <div class="container-fluid cajamarilla">
-      <div class="col-md-6 m-auto">
-        <h5 class="cursiva mb-3 mt-5 mb-5" id="">Nosotros</h5>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos eum
-          vitae perspiciatis nisi unde quis molestias delectus sunt, laborum,
-          amet cupiditate aut voluptatum eius molestiae tenetur, reiciendis
-          aliquam sint necessitatibus?
-        </p>
+      <div id="table" class="col-md-6">
+        <div id="centeralign" class="">
+          <h1 class="titulo">MAS DISEÑO</h1>
+          <p class="parrafo">
+            Somos diseño, somos tu aliado en la creación de contenido para tus
+            redes sociales, el logo de tu empresa, nos dedicamos a cuidar tu
+            imagen empresarial
+          </p>
+        </div>
       </div>
     </div>
     <footer>
