cambios en servicios

--- a/nosotros.html
+++ b/nosotros.html
@@ -84,7 +84,7 @@
               <li class="nav-item">
                 <a
                   href="https://www.facebook.com/M%C3%A1s-Dise%C3%B1o-105418711785344"
-                  class="mx-2 my-auto text-white hvr-pulse-grow"
+                  class="mx-2 mt-1 text-white hvr-pulse-grow"
                   target="_blank"
                   ><i class="fab fa-facebook-square fa-2x"></i
                 ></a>
@@ -92,7 +92,7 @@
               <li class="nav-item">
                 <a
                   href="https://www.instagram.com/masdisseno/"
-                  class="mx-2 my-auto text-white hvr-pulse-grow"
+                  class="mx-2 mt-1 text-white hvr-pulse-grow"
                   target="_blank"
                   ><i class="fab fa-instagram fa-2x"></i
                 ></a>
@@ -106,12 +106,14 @@
       <div id="table" class="col-md-6">
         <div id="centeralign" class="">
           <h1 class="titulo">MAS DISEÑO</h1>
-          <p class="parrafo">
-            Somos diseño, somos tu aliado en la creación de contenido para tus
-            redes sociales, el logo de tu empresa, nos dedicamos a cuidar tu
-            imagen empresarial
-          </p>
         </div>
+      </div>
+    </div>
+    <div class="container-fluid cajamarilla h-50">
+      <div class="col-md-9 mx-auto h-auto">
+        <p class="parrafo">Somos tu aliado en la creación de contenido</p>
+        <p class="parrafo">Diseños unicos para tu empresa</p>
+        <p class="parrafo">Redes sociales para destacar</p>
       </div>
     </div>
     <footer>
@@ -133,7 +135,7 @@
                 <a
                   class="nav-link h6 text-dark hvr-pulse-grow mx-2"
                   aria-current="page"
-                  href="#"
+                  href="nosotros.html"
                   >Nosotros</a
                 >
               </li>
