--- a/servicios.html
+++ b/servicios.html
@@ -66,34 +66,34 @@
         <div class="container cajablanca  ">
           <div class="row justify-content-center">
             <div class=" mx-5 my-5 col-md-3">
-            <h2 class="mediano mt-5 mb-3">Diseño</h2>
+            <h2 class="grande mt-5 mb-3">Diseño</h2>
            </div>
-            <div class="col-12 col-md-10 ">
+            <div class="col-12 ">
           
               <div class="row justify-content-around">
  
-      <div class="col-12 col-md-4 mb-5">
-          <div class=" card border-light shadow-lg rounded" style="width: 17rem;">
-         <img src="png/Pagina web-39.png" class="card-img-top mb-3 " alt="...">
-         <div class="card-body">
-         <h5 class="card-title">Diseño Web</h5>
-         <p class="card-text">Llevamos a cabo proyectos webs que funcionan gracias a un gran diseño, una programación perfecta y una comunicación potente.</p>
+      <div class="col-10 col-md-4 ">
+           <div class=" card border-light shadow-lg rounded"> 
+         <img src="png/Pagina web-39.png" class="card-img-top" alt="...">
+         <div class="card-body mt-0 text-justify">
+         <h5 class="card-title">DISEÑO WEB</h5>
+         <p class="card-text mb-4">Llevamos a cabo proyectos webs que funcionan gracias a un gran diseño, una programación perfecta y una comunicación potente.</p>
          <a href="mailto:holamasdiseno@gmail.com" class="btn btn-primary">Ver mas</a>
       </div>
       </div>
         </div>
-            <div class="col-12 col-md-4 mb-5">
-          <div class="card border-light shadow-lg rounded" style="width: 17rem;">
+            <div class="col-10 col-md-4 ">
+          <div class="card border-light shadow-lg rounded" >
           <img src="png/Pagina web-40.png" class="card-img-top" alt="...">
           <div class="card-body">
-          <h5 class="card-title">Diseño Gráfico </h5>
-          <p class="card-text text-justify ">Diseño de identidad corporativa, merchandising,editorial,brochure, presentaciones,logotipos, folletos,placas redes y más. </p>
+          <h5 class="card-title">DISEÑO GRÁFICO</h5>
+          <p class="card-text text-justify mb-4">Diseño de identidad corporativa, merchandising,editorial,brochure, presentaciones,logotipos, folletos,placas redes y más. </p>
            <a href="mailto:holamasdiseno@gmail.com" class="btn btn-primary">Ver mas</a>
            </div>
         </div>
         </div>
-            <div class="col-12 col-md-4 mb-5">
-          <div class=" card border-light shadow-lg rounded" style="width: 17rem;">
+            <div class="col-10 col-md-4 mb-5">
+          <div class=" card border-light shadow-lg rounded" >
             <img src="png/Pagina web-41.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">DISEÑO LOGOTIPOS</h5>
@@ -119,11 +119,11 @@
             <h2 class="mediano mt-5 mb-3">Servicios</h2>
            
           </div>
-            <div class="col-12 col-md-10 ">
+            <div class="col-12 ">
               <div class="row justify-content-around">
  
              <div class="col-12 col-md-4  mb-5">
-          <div class=" card border-light shadow-lg rounded" style="width: 15rem;">
+          <div class=" card border-light shadow-lg rounded">
          <img src="png/Pagina web-42.png" class="card-img-top mb-3" alt="...">
          <div class="card-body">
            <h5 class="card-title">IDENTIDAD VISUAL</h5>
@@ -135,7 +135,7 @@ público.
       </div>
         </div>
             <div class="col-12 col-md-4  mb-5">
-          <div class="card border-light shadow-lg rounded" style="width: 15rem;">
+          <div class="card border-light shadow-lg rounded">
      <img src="png/Pagina web-43.png" class="card-img-top" alt="...">
      <div class="card-body">
        <h5 class="card-title">MANEJO REDES</h5>
@@ -146,7 +146,7 @@ público.
     </div>
         </div>
             <div class="col-12 col-md-4 mb-5">
-          <div class=" card border-light shadow-lg rounded" style="width: 15rem;">
+          <div class=" card border-light shadow-lg rounded">
      <img src="png/Pagina web-44.png" class="card-img-top" alt="...">
      <div class="card-body">
        <h5 class="card-title">SEO</h5>
