--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         </li>
         
         <li class="nav-item ">
-          <a href="https://www.facebook.com/M%C3%A1s-Dise%C3%B1o-105418711785344"  class="mx-2  my-auto text-white hvr-pulse-grow" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a> 
+          <a href="https://www.facebook.com/M%C3%A1s-Dise%C3%B1o-105418711785344"  class="mx-2  mt-1 text-white hvr-pulse-grow" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a> 
         </li>
         <li class="nav-item ">
-          <a href="https://www.instagram.com/masdisseno/"   class="mx-2  my-auto text-white hvr-pulse-grow" target="_blank"><i class="fab fa-instagram fa-2x"></i></a> 
+          <a href="https://www.instagram.com/masdisseno/"   class="mx-2  mt-1 text-white hvr-pulse-grow" target="_blank"><i class="fab fa-instagram fa-2x"></i></a> 
         </li>
       </ul>
     </div>
@@ -143,14 +143,7 @@
     </div>
   </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
+
 </div>
     </div>
     <div class="container-fluid cajamarilla">
@@ -184,13 +177,13 @@
          <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="assets/notebook-1_Mesa de trabajo 1-02.png" class="d-block w-100  img-fluid carrouselimg" alt="...">
+      <img src="assets/notebook-1_Mesa de trabajo 1-02.png" class="d-block w-100  img-fluid " alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/design-1_Mesa de trabajo 1-07.png" class="d-block w-100  img-fluid carrouselimg" alt="...">
+      <img src="assets/design-1_Mesa de trabajo 1-07.png" class="d-block w-100  img-fluid " alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/notebook-1_Mesa de trabajo 1-01.png" class="d-block w-100  img-fluid carrouselimg" alt="...">
+      <img src="assets/notebook-1_Mesa de trabajo 1-01.png" class="d-block w-100  img-fluid " alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
