--- a/nosotros.html
+++ b/nosotros.html
@@ -117,11 +117,16 @@
       </div>
     </div>
     <footer>
-      <div class="container mt-5">
-        <div class="row justify-content-around">
-          <div class="col-md-4 text-md-justify"></div>
-          <div class="col-md-3 text-end">
-            <ul class="navbar-nav d-flex flex-row text-end">
+      <div class="container my-2">
+        <div class="row justify-content-around text-center">
+          <div class="col-md-4 text-md-start">
+            <p class="text-muted my-4">
+              Mas diseño, web design, redes sociales, logos y presencia online
+              integral
+            </p>
+          </div>
+          <div class="col-md-3 text-md-start">
+            <ul class="navbar-nav d-flex flex-row my-4">
               <li class="nav-item">
                 <a
                   class="nav-link h6 text-dark hvr-pulse-grow mx-2"
@@ -130,12 +135,12 @@
                   >Inicio</a
                 >
               </li>
-              <div class="vertical mx-2 mt-2"></div>
+              <div class="vertical mx-1 mt-2"></div>
               <li class="nav-item">
                 <a
                   class="nav-link h6 text-dark hvr-pulse-grow mx-2"
                   aria-current="page"
-                  href="nosotros.html"
+                  href="#"
                   >Nosotros</a
                 >
               </li>
@@ -149,7 +154,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-md-4 text-md-end">
+          <div class="col-md-4 text-md-end my-4">
             <a
               href="https://www.instagram.com/masdisseno/"
               class="mx-2 text-dark hvr-pulse-grow"
