--- a/servicios.html
+++ b/servicios.html
@@ -76,29 +76,29 @@
            <div class=" card border-light shadow-lg rounded"> 
          <img src="png/Pagina web-39.png" class="card-img-top" alt="...">
          <div class="card-body mt-0 text-justify">
-         <h5 class="card-title">DISEÑO WEB</h5>
-         <p class="card-text mb-4">Llevamos a cabo proyectos webs que funcionan gracias a un gran diseño, una programación perfecta y una comunicación potente.</p>
-         <a href="mailto:holamasdiseno@gmail.com" class="btn btn-primary">Ver mas</a>
+         <!-- <h5 class="card-title">DISEÑO WEB</h5> -->
+         <p class="card-text mb-4 text-start">Llevamos a cabo proyectos webs que funcionan gracias a un gran diseño, una programación perfecta y una comunicación potente.</p>
+         <a href="mailto:holamasdiseno@gmail.com" class="btn btn-primary  mb-2">Ver mas</a>
       </div>
       </div>
         </div>
             <div class="col-10 col-md-4 ">
           <div class="card border-light shadow-lg rounded" >
           <img src="png/Pagina web-40.png" class="card-img-top" alt="...">
-          <div class="card-body">
-          <h5 class="card-title">DISEÑO GRÁFICO</h5>
-          <p class="card-text text-justify mb-4">Diseño de identidad corporativa, merchandising,editorial,brochure, presentaciones,logotipos, folletos,placas redes y más. </p>
-           <a href="mailto:holamasdiseno@gmail.com" class="btn btn-primary">Ver mas</a>
+          <div class="card-body text-start">
+          <!-- <h5 class="card-title">DISEÑO GRÁFICO</h5> -->
+          <p class="card-text  mb-3">Diseño de identidad corporativa, merchandising,editorial,brochure, presentaciones,logotipos, folletos,placas redes y más. </p>
+           <a href="mailto:holamasdiseno@gmail.com" class="btn btn-primary mb-2">Ver mas</a>
            </div>
         </div>
         </div>
             <div class="col-10 col-md-4 mb-5">
-          <div class=" card border-light shadow-lg rounded" >
+          <div class=" card border-light shadow-lg rounded p-0" >
             <img src="png/Pagina web-41.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">DISEÑO LOGOTIPOS</h5>
-              <p class="card-text">Las redes sociales son un canal de venta y un lugar donde transmitir tus valores como empresa. Tenés que ir hacia donde está tu audiencia.</p>
-                <a href="mailto:holamasdiseno@gmail.com" class="btn btn-primary">Ver mas</a>
+                <!-- <h5 class="card-title">DISEÑO LOGOTIPOS</h5> -->
+              <p class="card-text space">Las redes sociales son un canal de venta y un lugar donde transmitir tus valores como empresa. Tenés que ir hacia donde está tu audiencia.</p>
+                <a href="mailto:holamasdiseno@gmail.com" class="btn btn-primary space">Ver mas</a>
        </div>
       </div>
         </div>
@@ -126,7 +126,7 @@
           <div class=" card border-light shadow-lg rounded">
          <img src="png/Pagina web-42.png" class="card-img-top mb-3" alt="...">
          <div class="card-body">
-           <h5 class="card-title">IDENTIDAD VISUAL</h5>
+           <!-- <h5 class="card-title">IDENTIDAD VISUAL</h5> -->
            <p class="card-text">Construcción de varios elementos gráficos y visuales para comunicar el concepto de una marca, sus valores y el posicionamiento en el mercado hacia su 
 público.
 </p>
@@ -138,8 +138,9 @@ público.
           <div class="card border-light shadow-lg rounded">
      <img src="png/Pagina web-43.png" class="card-img-top" alt="...">
      <div class="card-body">
-       <h5 class="card-title">MANEJO REDES</h5>
-       <p class="card-text">Las redes sociales son un canal de venta y un lugar donde transmitir tus valores como empresa. Tenés que ir hacia donde está tu audiencia.
+       <!-- <h5 class="card-title">MANEJO REDES</h5> -->
+       <p class="card-text mb-4
+       ">Las redes sociales son un canal de venta y un lugar donde transmitir tus valores como empresa. Tenés que ir hacia donde está tu audiencia.
 </p>
        <a href="mailto:holamasdiseno@gmail.com" class="btn btn-primary">Consulta</a>
      </div>
@@ -149,8 +150,8 @@ público.
           <div class=" card border-light shadow-lg rounded">
      <img src="png/Pagina web-44.png" class="card-img-top" alt="...">
      <div class="card-body">
-       <h5 class="card-title">SEO</h5>
-       <p class="card-text">Posicionanmiento organico, contextual de tu pagina optimizado para los motores de busqueda</p>
+       <!-- <h5 class="card-title">SEO</h5> -->
+       <p class="card-text mb-5">Posicionanmiento organico, contextual de tu pagina optimizado para los motores de busqueda</p>
        <a href="mailto:holamasdiseno@gmail.com" class="btn btn-primary">Consulta </a>
      </div>
     </div>
