--- a/nosotros.html
+++ b/nosotros.html
@@ -102,20 +102,64 @@
         </div>
       </nav>
     </div>
-    <div class="container-fluid cajamarilla">
-      <div id="table" class="col-md-6">
-        <div id="centeralign" class="">
-          <h1 class="titulo">MAS DISEÑO</h1>
+    <div class="container-fluid cajanosotros">
+      <div class="col-8">
+        <h1 class="titulo mt-3">MAS DISEÑO</h1>
+      </div>
+    </div>
+    <div class="container-fluid cajamarilla" id="alto">
+      <p class="parrafo mt-5">Somos tu aliado en la creación de contenido</p>
+      <p class="parrafo">Diseños unicos para tu empresa</p>
+      <p class="parrafo">Redes sociales para destacar</p>
+    </div>
+    <div
+      id="carouselExampleControls3"
+      class="carousel slide"
+      data-ride="carousel"
+    >
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            class="d-block w-100"
+            src="carrousel2/carrouselchico2.jpg"
+            alt="First slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="carrousel2/carrouselchico1.jpg"
+            alt="Second slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="carrousel2/carrouselchico3.jpg"
+            alt="Third slide"
+          />
         </div>
       </div>
+      <a
+        class="carousel-control-prev"
+        href="#carouselExampleControls"
+        role="button"
+        data-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a
+        class="carousel-control-next"
+        href="#carouselExampleControls"
+        role="button"
+        data-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-    <div class="container-fluid cajamarilla h-50">
-      <div class="col-md-9 mx-auto h-auto">
-        <p class="parrafo">Somos tu aliado en la creación de contenido</p>
-        <p class="parrafo">Diseños unicos para tu empresa</p>
-        <p class="parrafo">Redes sociales para destacar</p>
-      </div>
-    </div>
+
     <footer>
       <div class="container my-2">
         <div class="row justify-content-around text-center">
