--- a/nosotros.html
+++ b/nosotros.html
@@ -142,7 +142,7 @@
       </div>
       <a
         class="carousel-control-prev"
-        href="#carouselExampleControls"
+        href="#carouselExampleControls3"
         role="button"
         data-slide="prev"
       >
@@ -151,7 +151,7 @@
       </a>
       <a
         class="carousel-control-next"
-        href="#carouselExampleControls"
+        href="#carouselExampleControls3"
         role="button"
         data-slide="next"
       >
