--- a/nosotros.html
+++ b/nosotros.html
@@ -113,36 +113,46 @@
       <p class="parrafo">Redes sociales para destacar</p>
     </div>
     <div
-      id="carouselExampleControls3"
+      id="carouselExampleIndicator"
       class="carousel slide"
       data-ride="carousel"
+      data-interval="5000"
     >
+      <ol class="carousel-indicators">
+        <li
+          data-target="#carouselExampleIndicator"
+          data-slide-to="0"
+          class="active"
+        ></li>
+        <li data-target="#carouselExampleIndicator" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicator" data-slide-to="2"></li>
+      </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img
             class="d-block w-100"
-            src="carrousel2/carrouselchico2.jpg"
+            src="carrousel2/carrouselchico3.jpg"
             alt="First slide"
           />
         </div>
         <div class="carousel-item">
           <img
             class="d-block w-100"
-            src="carrousel2/carrouselchico1.jpg"
+            src="carrousel2/carrouselchico2.jpg"
             alt="Second slide"
           />
         </div>
         <div class="carousel-item">
           <img
             class="d-block w-100"
-            src="carrousel2/carrouselchico3.jpg"
+            src="carrousel2/carrouselchico1.jpg"
             alt="Third slide"
           />
         </div>
       </div>
       <a
         class="carousel-control-prev"
-        href="#carouselExampleControls3"
+        href="#carouselExampleIndicator"
         role="button"
         data-slide="prev"
       >
@@ -151,7 +161,7 @@
       </a>
       <a
         class="carousel-control-next"
-        href="#carouselExampleControls3"
+        href="#carouselExampleIndicator"
         role="button"
         data-slide="next"
       >
@@ -215,5 +225,27 @@
         </div>
       </div>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      $(document).ready(function () {
+        $('.carousel').carousel({
+          interval: 2000,
+        });
+      });
+    </script>
   </body>
 </html>
