--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="masdiseño" content="diseño de logos,diseño web, posicionamiento web, tu marca en redes sociale y más "/>
+     <meta name="robots" content="index,follow"/>
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" />
     
