--- a/nosotros.html
+++ b/nosotros.html
@@ -60,7 +60,7 @@
                 <a
                   class="nav-link h6 text-white hvr-pulse-grow"
                   aria-current="index.html"
-                  href="#"
+                  href="#index.html"
                   >Inicio</a
                 >
               </li>
@@ -243,7 +243,7 @@
     <script>
       $(document).ready(function () {
         $('.carousel').carousel({
-          interval: 2000,
+          interval: 1000,
         });
       });
     </script>
