--- a/nosotros.html
+++ b/nosotros.html
@@ -116,7 +116,7 @@
       id="carouselExampleIndicator"
       class="carousel slide"
       data-ride="carousel"
-      data-interval="5000"
+      data-interval="4000"
     >
       <ol class="carousel-indicators">
         <li
@@ -126,6 +126,7 @@
         ></li>
         <li data-target="#carouselExampleIndicator" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicator" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicator" data-slide-to="3"></li>
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
