--- a/index.html
+++ b/index.html
@@ -110,22 +110,22 @@
     <div class="carousel-item active " data-bs-interval="10000">
       <img src="carrousel/carrousel1.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
+        <h5 class="black">Algunos de nuestros trabajos</h5>
+        <p class="black">Trabajos realizados para nuestros clientes</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="carrousel/carrousel2.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
+         <h5 class="black">Algunos de nuestros trabajos</h5>
+        <p class="black">Trabajos realizados para nuestros clientes</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="carrousel/carrousel3.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+         <h5 class="black">Algunos de nuestros trabajos</h5>
+        <p class="black">Trabajos realizados para nuestros clientes</p>
       </div>
     </div>
   </div>
